Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14764

Confusing error message: Table `t1` must have at least one temporal column

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • N/A
    • 10.3.4
    • Versioned Tables
    • None
    • bb-10.3-temporal ea49441c41

    Description

      This is yet another case where I think the use of "temporal" is quite confusing:

      MariaDB [test]> CREATE OR REPLACE TABLE t1 (s TIMESTAMP(6) GENERATED ALWAYS AS ROW START, e TIMESTAMP(6) GENERATED ALWAYS AS ROW END, PERIOD FOR SYSTEM_TIME (s,e)) WITH SYSTEM VERSIONING;
      ERROR 4128 (HY000): Table `t1` must have at least one temporal column
      

      Unless the wording is regulated by the standard, I'd suggest to change it. I think for an average user, if anything is "temporal" here, it's columns `s` and `e`, as they directly related to time, both by type and purpose. The next thought is that on some reason we require the table to have a column of a "temporal data type" (expression that is already used here and there); and only after all that one can start guessing that something else is meant.

      Attachments

        Activity

          pushed into bb-10.3-temporal-serg

          serg Sergei Golubchik added a comment - pushed into bb-10.3-temporal-serg

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.