MDEV-14764 Confusing error message: Table `t1` must have at least one temporal column

compiler warning (mix of bool and enum in ?:)