sql/sql_base.cc
@@ -7649,7 +7649,7 @@ insert_fields(THD *thd, Name_resolution_context *context, const char *db_name,
       if ((field= field_iterator.field()) &&
           (field->vers_sys_field() ?
             field->vers_sys_invisible(thd) :
-            field->invisible))
+            field->invisible != VISIBLE))
       {
         continue;
       }
